--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "element-ui": "^2.15.1",
+    "js-base64": "^3.6.0",
     "less": "^2.7.3",
     "less-loader": "^5.0.0",
+    "moment": "^2.29.1",
     "vue": "^2.6.11",
     "vue-router": "^3.0.1",
     "vuex": "^3.6.2"
